# discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  announcements.js  commands.js  credentials.example.json  db.js  docker-compose.yaml  env.example  index.js  index.ts  package-lock.json  package.json  qqq  tsconfig.json
lib/: bot-database.ts  bot.ts  cache.ts  constants.ts  database.ts  downloader.js  events-announcer.ts  ftp-upload.js  logger.ts  messages.ts  pbo-handler.js  pbo-tools.js  server-status.ts
lib/commands/: add-role.ts  allow-role.ts  autoban.ts  command.ts  deployed.ts  disallow-role.ts  ping.ts  remove-role.ts  roles.ts  stats.ts  upload.ts
lib/pbo/: pbo-downloader.ts  pbo-states-enum.ts  pbo-tools.ts  pbo-uploader.ts
lib/util/: banMember.ts  discord.ts  isAdmin.ts  sftp.ts
src/: app.rs  config.rs  main.rs  state.rs
src/commands/: deploy_repo.rs  deployed.rs  list_roles.rs  mod.rs  restart_server.rs  shutdown.rs  stats.rs
src/commands/add_role/: command.rs  errors.rs
src/commands/allow_role/: command.rs  errors.rs  forbidden_permission.rs  mod.rs
src/commands/common/: macros.rs  mod.rs
src/commands/forbid_role/: command.rs  errors.rs
src/commands/models/: bad_roles.rs  cdlc.rs  mod.rs  pbo_name.rs  repo.rs
src/commands/remove_role/: command.rs  errors.rs
src/helpers/: mod.rs  pbo_downlaoder.rs  pbo_linter.rs
src/services/: kv_cache.rs  mod.rs
test/: bot.spec.ts  database.spec.ts  downloader.spec.js  ftp-upload.spec.js  helpers.ts  pbo-tools.spec.js
test/pbo/: pbo-downloader.spec.ts  pbo-tools.spec.ts
(+33 files in other folders)
