[package]
name = "fparma-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
envconfig = { version = "0.11.0"}
mongodb = "3.2.3"
poise = "0.6.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
openssh-sftp-client = { version = "0.15.2", features = ["openssh"] }
anyhow = "1.0.97"
serde = "1.0.219"
chrono = "0.4.40"
openssh = { version = "0.11.5", features = ["native-mux"] }
reqwest = { version = "0.12.15", features = ["stream"] }
uuid = { version = "1.16.0" , features = ["v4"]}
thiserror = "2.0.12"
log = "0.4.27"
regex = "1.11.1"
# TODO: replace with actual version once available
# PR: https://github.com/gamedig/rust-gamedig/pull/240
gamedig = {git = "https://github.com/Perondas/rust-gamedig.git"}
sled = "0.34.7"
bincode = { version = "2.0.1" , features = ["serde"]}
